<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andresteran.tarea27.Profile">

    <include layout="@layout/activity_mytoolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_weight="0.6">
            <ImageView
                android:id="@+id/Logo_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_launcher"
                />
            <TextView
                android:id="@+id/Name_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:layout_toRightOf="@id/Logo_Profile"/>
            <TextView
                android:id="@+id/Lastname_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lastname"
                android:layout_below="@id/Name_Profile"
                android:layout_toRightOf="@id/Logo_Profile"/>
            <TextView
                android:id="@+id/Age_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Age"
                android:layout_below="@id/Lastname_Profile"
                android:layout_toRightOf="@id/Logo_Profile"/>
            <TextView
                android:id="@+id/NumberTele_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Numertele"
                android:layout_below="@id/Age_Profile"
                android:layout_toRightOf="@id/Logo_Profile"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25dp"
            android:layout_weight="0.4">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_email"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_commentary"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btn_Upate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_btn_update"/>

        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
